# BadAccessGuards

./: .gitignore  BadAccessGuards.cpp  BadAccessGuards.h  Benchmarks.md  CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
benchmarks/: BenchGuardedVectorExample.cpp  CMakeLists.txt
examples/: Basic.cpp  GuardedVectorExample.cpp  GuardedVectorExample.h
src/: BadAccessGuards.cpp  BadAccessGuards.h
